# network-gpu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  pyproject.toml
client/: Cargo.toml
client/src/: cache.rs  client.rs  connection.rs  error.rs  lib.rs  tensor.rs
crates/neural-layers/: Cargo.toml
crates/neural-layers/src/: lib.rs
crates/tensor-ops/: Cargo.toml
crates/tensor-ops/src/: lib.rs
examples/: README.md  advanced_layers.py  basic_tensor_ops.py  basic_usage.py  linear_layer_demo.py  machine_learning.py  simple_mlp.py  test_compilation.py
proto/: Cargo.toml  build.rs  networkgpu.proto
proto/src/: lib.rs
python-bindings/: Cargo.toml  pyproject.toml
python-bindings/networkgpu/: __init__.py  pytorch_integration.py
python-bindings/src/: client.rs  device.rs  error.rs  lib.rs  runtime.rs  tensor.rs
python/network_gpu/: __init__.py
server/: Cargo.toml
server/src/: config.rs  error.rs  gpu.rs  gpu_mock.rs  main.rs  memory.rs  service.rs  stream.rs  tensor.rs
src/: lib.rs
