[workspace]
members = [
    "server",
    "client", 
    "python-bindings",
    "proto"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"

[workspace.dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]