[package]
name = "networkgpu-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "networkgpu"
crate-type = ["cdylib"]

[dependencies]
networkgpu-client = { path = "../client" }
networkgpu-proto = { path = "../proto" }
pyo3 = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
numpy = "0.20"
once_cell = "1.19"